2011-05-29  Alan Modra  <amodra@gmail.com>

	Apply from mainline
	2011-05-18  Nick Clifton  <nickc@redhat.com>
	PR binutils/12753
	* nm.c (filter_symbols): Treat unique symbols as global symbols.
	* doc/binutils.texi (nm): Mention that some lowercase letters
	actually indicate global symbols.

	2011-05-07  Alan Modra  <amodra@gmail.com>
	* objcopy.c (copy_archive): Check bfd_openw result in unknown object
	case.  Rewrite without goto.

	2011-04-03  H.J. Lu  <hongjiu.lu@intel.com>
	PR binutils/12632
	* objcopy.c (copy_unknown_object): Make the archive element
	readable.

2011-03-01  Akos Pasztory  <akos.pasztory@gmail.com>

	PR binutils/12523
	* readelf.c (process_object): Clear dynamic_info_DT_GNU_HASH.

2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2011-01-19  Maciej W. Rozycki  <macro@codesourcery.com>
	* readelf.c (process_object): Free dynamic_section after use.

	2011-01-18  H.J. Lu  <hongjiu.lu@intel.com>
	PR binutils/12408
	* readelf.c (process_archive): Free and reset dump_sects
	after processing each archive member.

	2011-01-11  Andreas Schwab  <schwab@redhat.com>
	* readelf.c (print_symbol): Handle symbol characters as unsigned.
	Whitespace fixes.

	2011-01-06  Vladimir Siminov  <sv@sw.ru>
	* bucomm.c (get_file_size): Check for negative sizes and issue a
	warning message if encountered.

	2011-01-01  H.J. Lu  <hongjiu.lu@intel.com>
	* version.c (print_version): Update copyright to 2011.

	2010-12-15  Kai Tietz  <kai.tietz@onevision.com>
	* dwarf.c (display_gdb_index): Fix printf types for
	used formatters.

	2010-12-03  Doug Evans  <dje@google.com>
	* dwarf.c: #include "bfd_stdint.h".
	(do_gdb_index): New global.
	(display_gdb_index): New function.
	(dwarf_select_sections_by_names) Add "gdb_index".
	(dwarf_select_sections_all): Set do_gdb_index.
	(debug_displays): Add .gdb_index.
	* dwarf.h (do_gdb_index): Declare.
	* objdump.c (usage): Add gdb_index.
	* readelf.c (usage): Add gdb_index.